# short-video-ranpatsu-tool

./: .env.example  .gitignore  README.md  cloudbuild.yaml  pyproject.toml
assets/templates/: subtitle_style.ass
config/: default.toml  profiles.toml
docs/: CLOUD_OPERATIONS.md
prompts/: clip_selector.md  title_generator.md
scripts/: Cloud_Deploy.command  Cloud_Deploy_GUI.command  Launch_Podcast_Clip_Factory.command  Launch_Short_Video_Ranpatsu_Tool.command
src/podcast_clip_factory/: __init__.py  app.py  cli.py  cloud_deploy_app.py
src/podcast_clip_factory/application/: orchestrator.py  pipeline_executor.py  retry_policy.py
src/podcast_clip_factory/domain/: clip_rules.py  models.py  protocols.py
src/podcast_clip_factory/infrastructure/llm/: fallback_client.py  gemini_client.py
src/podcast_clip_factory/infrastructure/render/: ffmpeg_builder.py  letterbox_layout.py  local_renderer.py  subtitle_generator.py
src/podcast_clip_factory/infrastructure/storage/: artifact_store.py  sqlite_repo.py
src/podcast_clip_factory/infrastructure/transcriber/: faster_whisper.py  mlx_whisper.py
src/podcast_clip_factory/presentation/: main_view.py  progress_view.py  result_view.py  review_view.py
src/podcast_clip_factory/utils/: config.py  logger.py  media.py  paths.py
tests/: test_cancel_command.py  test_clip_rules.py  test_fallback_analyzer.py  test_ffmpeg_builder.py  test_gemini_client.py  test_gemini_prompt.py  test_mlx_transcriber.py  test_pipeline_fallback.py  test_preflight.py  test_silence_compaction.py  test_subtitle_sync.py
