[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "short-video-ranpatsu-tool"
version = "0.1.0"
description = "Desktop app to auto-generate podcast short clips"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ショート動画乱発ツール" }]
dependencies = [
  "flet>=0.28.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "structlog>=24.1.0",
  "pysubs2>=1.7.3",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
transcribe = [
  "mlx-whisper>=0.4.1",
  "faster-whisper>=1.0.3",
]
llm = [
  "google-genai>=1.40.0",
  "openai>=1.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.14.0",
]

[project.scripts]
pcf = "podcast_clip_factory.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
